--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuanto Peso?</title>
+    <title>Cuanto pesaria en?</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="contenedor">
+                <div class="logo">
+                    <p>Cuanto pesaria en?</p>
+                </div>
+
+                <div class="menu">
+                    <a href="">Mercurio</a>
+                    <a href="">Venus</a>
+                    <a href="">Tierra</a>
+                    <a href="">Marte</a>
+                    <a href="">Jupiter</a>
+                    <a href="">Saturno</a>
+                    <a href="">Urano</a>
+                    <a href="">Neptuno</a>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
