--- a/index.html
+++ b/index.html
@@ -26,6 +26,70 @@
                 </div>
             </div>
         </nav>
+
+        <div class="contenedor">
+            <div class="titulo-header">
+                <h1>Cuanto pesaria en?</h1>
+            </div>
+
+            <div class="contenedor-planetas">
+                <div class="planeta">
+                    <div class="imagen">
+                        <img src="assets/img/1-mercurio.png" alt="">
+                    </div>
+                    <a href="">Mercurio</a>
+                </div>
+
+                <div class="planeta">
+                    <div class="imagen">
+                        <img src="assets/img/2-venus.png" alt="">
+                    </div>
+                    <a href="">Venus</a>
+                </div>
+
+                <div class="planeta">
+                    <div class="imagen">
+                        <img src="assets/img/3-tierra.png" alt="">
+                    </div>
+                    <a href="">Tierra</a>
+                </div>
+
+                <div class="planeta">
+                    <div class="imagen">
+                        <img src="assets/img/4-marte.png" alt="">
+                    </div>
+                    <a href="">Marte</a>
+                </div>
+
+                <div class="planeta">
+                    <div class="imagen">
+                        <img src="assets/img/5-jupiter.png" alt="">
+                    </div>
+                    <a href="">Jupiter</a>
+                </div>
+
+                <div class="planeta">
+                    <div class="imagen">
+                        <img src="assets/img/6-saturno.png" alt="">
+                    </div>
+                    <a href="">Saturno</a>
+                </div>
+
+                <div class="planeta">
+                    <div class="imagen">
+                        <img src="assets/img/7-urano.png" alt="">
+                    </div>
+                    <a href="">Urano</a>
+                </div>
+
+                <div class="planeta">
+                    <div class="imagen">
+                        <img src="assets/img/8-neptuno.png" alt="">
+                    </div>
+                    <a href="">Neptuno</a>
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
