--- a/index.html
+++ b/index.html
@@ -91,5 +91,25 @@
             </div>
         </div>
     </header>
+
+    <section id="mercurio">
+        <div class="contenedor">
+            <div class="mercurio">
+                <div class="imagen">
+                    <img src="assets/img/1-mercurio.png" alt="">
+                </div>
+            </div>
+
+            <div class="caja-peso">
+                <p>Cuanto pesas?</p>
+                <form action="">
+                    <input type="number">
+                    <button type="submit">Enviar</button>
+                </form>
+                <p>Tu peso en <span>Mercurio</span> seria</p>
+                <p></p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
