--- a/index.html
+++ b/index.html
@@ -171,5 +171,25 @@
             </div>
         </div>
     </section>
+
+    <section id="jupiter">
+        <div class="contenedor">
+            <div class="jupiter">
+                <div class="imagen">
+                    <img src="assets/img/5-jupiter.png" alt="">
+                </div>
+            </div>
+
+            <div class="caja-peso">
+                <p>Cuanto pesas?</p>
+                <form action="">
+                    <input type="number">
+                    <button type="submit">Enviar</button>
+                </form>
+                <p>Tu peso en <span>Jupiter</span> seria</p>
+                <p></p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
