--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div class="contenedor">
             <div class="urano">
                 <div class="imagen">
-                    <img src="assets/img/7-urano.png alt="">
+                    <img src="assets/img/7-urano.png" alt="">
                 </div>
             </div>
 
@@ -227,6 +227,26 @@
                     <button type="submit">Enviar</button>
                 </form>
                 <p>Tu peso en <span>Urano</span> seria</p>
+                <p></p>
+            </div>
+        </div>
+    </section>
+
+    <section id="neptuno">
+        <div class="contenedor">
+            <div class="neptuno">
+                <div class="imagen">
+                    <img src="assets/img/7-urano.png" alt="">
+                </div>
+            </div>
+
+            <div class="caja-peso">
+                <p>Cuanto pesas?</p>
+                <form action="">
+                    <input type="number">
+                    <button type="submit">Enviar</button>
+                </form>
+                <p>Tu peso en <span>Neptuno</span> seria</p>
                 <p></p>
             </div>
         </div>
