--- a/index.html
+++ b/index.html
@@ -251,5 +251,13 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="contenedor">
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/7adadb0fdb.js" crossorigin="anonymous"></script>
 </body>
 </html>
