--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuanto pesaria en?</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header>
@@ -236,7 +237,7 @@
         <div class="contenedor">
             <div class="neptuno">
                 <div class="imagen">
-                    <img src="assets/img/7-urano.png" alt="">
+                    <img src="assets/img/8-neptuno.png" alt="">
                 </div>
             </div>
 
