Actualizacion .menu - HTML // Actualizacion Preformateando - CSS // Actualizacion NAV - CSS

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <nav>
             <div class="contenedor">
                 <div class="logo">
-                    <p>Cuanto pesaria en?</p>
+                    <p class="texto-normal">Cuanto pesaria en?</p>
                 </div>
 
                 <div class="menu">
-                    <a href="">Mercurio</a>
-                    <a href="">Venus</a>
-                    <a href="">Tierra</a>
-                    <a href="">Marte</a>
-                    <a href="">Jupiter</a>
-                    <a href="">Saturno</a>
-                    <a href="">Urano</a>
-                    <a href="">Neptuno</a>
+                    <a href="" class="texto-normal">Mercurio</a>
+                    <a href="" class="texto-normal">Venus</a>
+                    <a href="" class="texto-normal">Tierra</a>
+                    <a href="" class="texto-normal">Marte</a>
+                    <a href="" class="texto-normal">Jupiter</a>
+                    <a href="" class="texto-normal">Saturno</a>
+                    <a href="" class="texto-normal">Urano</a>
+                    <a href="" class="texto-normal">Neptuno</a>
                 </div>
             </div>
         </nav>
