Actualizacion Header y Nav - HTML // Actualizacion Variables, Header, Nav - CSS

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="contenedor">
             <div class="titulo-header">
-                <h1>Cuanto pesaria en?</h1>
+                <h1 class="texto-titulo">Cuanto<br>pesarias<br>en?</h1>
             </div>
 
             <div class="contenedor-planetas">
@@ -38,56 +38,73 @@
                     <div class="imagen">
                         <img src="assets/img/1-mercurio.png" alt="">
                     </div>
-                    <a href="">Mercurio</a>
+                    
+                    <div class="nombre">
+                        <a href="" class="texto-normal">Mercurio</a>
+                    </div>
                 </div>
 
                 <div class="planeta">
                     <div class="imagen">
                         <img src="assets/img/2-venus.png" alt="">
                     </div>
-                    <a href="">Venus</a>
+                    <div class="nombre">
+                        <a href="" class="texto-normal">Venus</a>
+                    </div>
                 </div>
 
                 <div class="planeta">
                     <div class="imagen">
                         <img src="assets/img/3-tierra.png" alt="">
                     </div>
-                    <a href="">Tierra</a>
+                    <div class="nombre">
+                        <a href="" class="texto-normal">Tierra</a>
+                    </div>
                 </div>
 
                 <div class="planeta">
                     <div class="imagen">
                         <img src="assets/img/4-marte.png" alt="">
                     </div>
-                    <a href="">Marte</a>
+                    <div class="nombre">
+                        <a href="" class="texto-normal">Marte</a>
+                    </div>
                 </div>
 
                 <div class="planeta">
                     <div class="imagen">
                         <img src="assets/img/5-jupiter.png" alt="">
                     </div>
-                    <a href="">Jupiter</a>
+                    <div class="nombre">
+                        <a href="" class="texto-normal">Jupiter</a>
+                    </div>
                 </div>
 
                 <div class="planeta">
                     <div class="imagen">
                         <img src="assets/img/6-saturno.png" alt="">
                     </div>
-                    <a href="">Saturno</a>
+                    <div class="nombre">
+                        <a href="" class="texto-normal">Saturno</a>
+                    </div>
                 </div>
 
                 <div class="planeta">
                     <div class="imagen">
                         <img src="assets/img/7-urano.png" alt="">
                     </div>
-                    <a href="">Urano</a>
+                    <div class="nombre">
+                        <a href="" class="texto-normal">Urano</a>
+                    </div>
                 </div>
 
                 <div class="planeta">
                     <div class="imagen">
                         <img src="assets/img/8-neptuno.png" alt="">
                     </div>
-                    <a href="">Neptuno</a>
+                    <div class="nombre">
+                        <a href="" class="texto-normal">Neptuno</a>
+                    </div>
                 </div>
             </div>
         </div>
