Actualizacion #mercurio - HTML // Mercurio - CSS

--- a/index.html
+++ b/index.html
@@ -119,13 +119,17 @@
             </div>
 
             <div class="caja-peso">
-                <p>Cuanto pesas?</p>
-                <form action="">
-                    <input type="number">
-                    <button type="submit">Enviar</button>
-                </form>
-                <p>Tu peso en <span>Mercurio</span> seria</p>
-                <p></p>
+                <div class="contenido">
+                    <p class="texto-mediano">Cuanto pesas?</p>
+                    <form action="">
+                        <input type="number" class="texto-mediano">
+                        <button type="submit" class="texto-mediano">Enviar</button>
+                    </form>
+                    <p class="texto-mediano">Tu peso en <span>Mercurio</span> seria</p>
+                    <div class="resultado">
+                        <p class="texto-grande">???</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
