Actualizacion #mercurio - HTML // Actualizacion #mercurio - CSS

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
                 </div>
 
                 <div class="menu">
-                    <a href="" class="texto-normal">Mercurio</a>
-                    <a href="" class="texto-normal">Venus</a>
-                    <a href="" class="texto-normal">Tierra</a>
-                    <a href="" class="texto-normal">Marte</a>
-                    <a href="" class="texto-normal">Jupiter</a>
-                    <a href="" class="texto-normal">Saturno</a>
-                    <a href="" class="texto-normal">Urano</a>
-                    <a href="" class="texto-normal">Neptuno</a>
+                    <a href="#mercurio" class="texto-normal">Mercurio</a>
+                    <a href="#venus" class="texto-normal">Venus</a>
+                    <a href="#tierra" class="texto-normal">Tierra</a>
+                    <a href="#marte" class="texto-normal">Marte</a>
+                    <a href="#jupiter" class="texto-normal">Jupiter</a>
+                    <a href="#saturno" class="texto-normal">Saturno</a>
+                    <a href="#urano" class="texto-normal">Urano</a>
+                    <a href="#neptuno" class="texto-normal">Neptuno</a>
                 </div>
             </div>
         </nav>
@@ -112,7 +112,7 @@
 
     <section id="mercurio">
         <div class="contenedor">
-            <div class="mercurio">
+            <div class="planeta">
                 <div class="imagen">
                     <img src="assets/img/1-mercurio.png" alt="">
                 </div>
