--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="contenedor">
             <div class="planeta">
                 <div class="imagen">
-                    <img src="assets/img/3-tierra.png" alt="">
+                    <img src="assets/img/4-marte.png" alt="">
                 </div>
             </div>
 
@@ -197,7 +197,7 @@
                         <input type="number" class="texto-mediano">
                         <button type="submit" class="texto-mediano">Enviar</button>
                     </form>
-                    <p class="texto-mediano">Tu peso en la <span>Tierra</span> seria</p>
+                    <p class="texto-mediano">Tu peso en <span>Marte</span> seria</p>
                     <div class="resultado">
                         <p class="texto-grande">???</p>
                     </div>
