--- a/index.html
+++ b/index.html
@@ -230,6 +230,30 @@
         </div>
     </section>
 
+    <section id="saturno">
+        <div class="contenedor">
+            <div class="planeta">
+                <div class="imagen">
+                    <img src="assets/img/5-jupiter.png" alt="">
+                </div>
+            </div>
+
+            <div class="caja-peso">
+                <div class="contenido">
+                    <p class="texto-mediano">Cuanto pesas?</p>
+                    <form action="">
+                        <input type="number" class="texto-mediano">
+                        <button type="submit" class="texto-mediano">Enviar</button>
+                    </form>
+                    <p class="texto-mediano">Tu peso en <span>Saturno</span> seria</p>
+                    <div class="resultado">
+                        <p class="texto-grande">???</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="contenedor">
             <a href=""><i class="fa-brands fa-instagram"></i></a>
