Actualizacion de #jupiter - CSS

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="contenedor">
             <div class="planeta">
                 <div class="imagen">
-                    <img src="assets/img/5-jupiter.png" alt="">
+                    <img src="assets/img/6-saturno.png" alt="">
                 </div>
             </div>
 
