--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
     <footer>
         <div class="contenedor">
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/devocode/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
 
