Actualizacion Header - CSS

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     
                     <div class="nombre">
-                        <a href="" class="texto-normal">Mercurio</a>
+                        <a href="mercurio" class="texto-normal">Mercurio</a>
                     </div>
                 </div>
 
@@ -49,7 +49,7 @@
                         <img src="assets/img/2-venus.png" alt="">
                     </div>
                     <div class="nombre">
-                        <a href="" class="texto-normal">Venus</a>
+                        <a href="#venus" class="texto-normal">Venus</a>
                     </div>
                 </div>
 
@@ -58,7 +58,7 @@
                         <img src="assets/img/3-tierra.png" alt="">
                     </div>
                     <div class="nombre">
-                        <a href="" class="texto-normal">Tierra</a>
+                        <a href="#tierra" class="texto-normal">Tierra</a>
                     </div>
                 </div>
 
@@ -67,7 +67,7 @@
                         <img src="assets/img/4-marte.png" alt="">
                     </div>
                     <div class="nombre">
-                        <a href="" class="texto-normal">Marte</a>
+                        <a href="#marte" class="texto-normal">Marte</a>
                     </div>
                 </div>
 
@@ -76,7 +76,7 @@
                         <img src="assets/img/5-jupiter.png" alt="">
                     </div>
                     <div class="nombre">
-                        <a href="" class="texto-normal">Jupiter</a>
+                        <a href="#jupiter" class="texto-normal">Jupiter</a>
                     </div>
                 </div>
 
@@ -85,7 +85,7 @@
                         <img src="assets/img/6-saturno.png" alt="">
                     </div>
                     <div class="nombre">
-                        <a href="" class="texto-normal">Saturno</a>
+                        <a href="#saturno" class="texto-normal">Saturno</a>
                     </div>
                 </div>
 
@@ -94,7 +94,7 @@
                         <img src="assets/img/7-urano.png" alt="">
                     </div>
                     <div class="nombre">
-                        <a href="" class="texto-normal">Urano</a>
+                        <a href="#urano" class="texto-normal">Urano</a>
                     </div>
                 </div>
 
@@ -103,7 +103,7 @@
                         <img src="assets/img/8-neptuno.png" alt="">
                     </div>
                     <div class="nombre">
-                        <a href="" class="texto-normal">Neptuno</a>
+                        <a href="#neptuno" class="texto-normal">Neptuno</a>
                     </div>
                 </div>
             </div>
