--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     
                     <div class="nombre">
-                        <a href="mercurio" class="texto-normal">Mercurio</a>
+                        <a href="#mercurio" class="texto-normal">Mercurio</a>
                     </div>
                 </div>
 
