.seccion-planeta - HTML

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
     </header>
 
-    <section id="mercurio">
+    <section id="mercurio" class="seccion-planeta">
         <div class="contenedor">
             <div class="planeta">
                 <div class="imagen">
@@ -134,7 +134,7 @@
         </div>
     </section>
 
-    <section id="venus">
+    <section id="venus" class="seccion-planeta">
         <div class="contenedor">
             <div class="planeta">
                 <div class="imagen">
@@ -158,7 +158,7 @@
         </div>
     </section>
 
-    <section id="tierra">
+    <section id="tierra" class="seccion-planeta">
         <div class="contenedor">
             <div class="planeta">
                 <div class="imagen">
@@ -182,7 +182,7 @@
         </div>
     </section>
 
-    <section id="marte">
+    <section id="marte" class="seccion-planeta">
         <div class="contenedor">
             <div class="planeta">
                 <div class="imagen">
@@ -206,7 +206,7 @@
         </div>
     </section>
 
-    <section id="jupiter">
+    <section id="jupiter" class="seccion-planeta">
         <div class="contenedor">
             <div class="planeta">
                 <div class="imagen">
@@ -230,7 +230,7 @@
         </div>
     </section>
 
-    <section id="saturno">
+    <section id="saturno" class="seccion-planeta">
         <div class="contenedor">
             <div class="planeta">
                 <div class="imagen">
@@ -254,7 +254,7 @@
         </div>
     </section>
 
-    <section id="urano">
+    <section id="urano" class="seccion-planeta">
         <div class="contenedor">
             <div class="planeta">
                 <div class="imagen">
@@ -278,7 +278,7 @@
         </div>
     </section>
 
-    <section id="neptuno">
+    <section id="neptuno" class="seccion-planeta">
         <div class="contenedor">
             <div class="planeta">
                 <div class="imagen">
